Fix timeline gap

--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -209,6 +209,7 @@
 }
 
 .replay-player .progress-line.end {
+  width: 100%;
   background: var(--progressbar-background);
 }
 
